--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/background_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background_home" />
+
     <TextView
-        android:id="@+id/harowa"
+        android:id="@+id/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerInParent="true"
+        android:background="@color/design_default_color_surface"
+        android:text="@string/start_play_text"
+        android:textColor="#000000"
+        android:textSize="@dimen/text_size_sp_medium"
+        android:translationY="140dp" />
 
-    <Button
-        android:id="@+id/button"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="187dp"
-        tools:layout_editor_absoluteY="454dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="89dp"
+        android:background="@color/design_default_color_surface"
+        android:text="@string/display_high_score"
+        android:id="@+id/display_high_score"
+        android:textSize="@dimen/text_size_sp_small" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName"
+    <ImageView
+        android:id="@+id/max_exp_bar"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:translationX="40dp"
+        android:translationY="10dp"
+        android:src="@drawable/max_exp_bar" />
+
+    <ImageView
+        android:id="@+id/exp_bar"
+        android:layout_width="144dp"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:translationX="43dp"
+        android:translationY="13dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/exp_bar" />
+
+    <ImageView
+        android:id="@+id/exp_txt"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:translationX="10dp"
+        android:translationY="12dp"
+        android:src="@drawable/exp_text" />
+
+    <TextView
+        android:id="@+id/display_rank_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="239dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:translationX="202dp"
+        android:translationY="12dp"
+        android:background="@color/design_default_color_surface"
+        android:text="1"
+        android:textSize="@dimen/text_size_sp_small" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/display_rank_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:translationX="195dp"
+        android:translationY="5dp"
+        android:background="@color/design_default_color_surface"
+        android:text="Rank"
+        android:textSize="12sp" />
+
+</RelativeLayout>
