--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RhythmGame" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.CiWoTukuritai" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,9 +14,12 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.RhythmGame.noActionBar">
-        <item name="windowNoTitle">true</item>
+    <style name="Theme.CiWoTukuritai.NoActionBar">
         <item name="windowActionBar">false</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="Theme.CiWoTukuritai.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.CiWoTukuritai.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
